# 3d-hotel-generator

./: .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml
docs/: 3d-printing-constraints.md  architectural-styles.md  board-game-history.md  geometry-library-evaluation.md  procedural-generation.md  software-architecture.md  stl-generation.md  web-ui-architecture.md
renders/: hotel_art_deco.stl  hotel_classical.stl  hotel_mediterranean.stl  hotel_modern.stl  hotel_skyscraper.stl  hotel_townhouse.stl  hotel_tropical.stl  hotel_victorian.stl
renders/complex_boomerang/: base_plate.stl  building_01_tower.stl  building_03_wing.stl  manifest.json
renders/complex_fujiyama/: base_plate.stl  building_01_main.stl  building_03_annex.stl  manifest.json
renders/complex_letoile/: base_plate.stl  building_01_main.stl  manifest.json
renders/complex_president/: base_plate.stl  building_01_main.stl  building_03_annex.stl  manifest.json
renders/complex_royal/: base_plate.stl  building_01_main.stl  building_03_wing.stl  building_04_tower.stl  manifest.json
renders/complex_safari/: base_plate.stl  building_01_main.stl  (+2 more)
scripts/: critique_hotel.py  render_hotel.py  render_style_grid.py  server-start.sh  server-stop.sh  setup_environment.sh  validate_step.py
tests/: conftest.py  test_api.py  test_assembly.py  test_board.py  test_complex.py  test_components.py  test_config.py  test_export.py  test_frame.py  test_geometry.py  test_integration.py  test_landscape.py  test_layout.py  test_presets.py  test_styles.py
web/: app.js  downloads.html  index.html  style.css
(+57 files in other folders)
